dark: fix exporess checkout covering 'add review' button

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* --------------------- */
 /* ----- variables ----- */
 /* -------------------- */
@@ -550,6 +551,7 @@ input:not([type=radio]),
   left: 0;
   width: 100%;
   z-index: 999;
+  pointer-events: none;
 }
 @media (min-width: 768px) {
   .sticky-elements-wrapper {
